<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:background="#FFC75A">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/info"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/info_pic"
            android:contentDescription="todo"
            android:radius="90dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <CheckBox
            android:id="@+id/depress"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:text="@string/depress"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <CheckBox
            android:id="@+id/recognize"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:text="@string/recognization"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/depress"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <CheckBox
            android:id="@+id/chronic"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/chronic"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headheart" />

        <CheckBox
            android:id="@+id/sugarill"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sugarill"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/depress" />

        <CheckBox
            android:id="@+id/highpress"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/highpress"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/sugarill"
            app:layout_constraintTop_toBottomOf="@+id/recognize" />

        <CheckBox
            android:id="@+id/midwind"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/midwind"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/headheart"
            app:layout_constraintTop_toBottomOf="@+id/highpress" />

        <CheckBox
            android:id="@+id/pakinshen"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/pakinshen"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/chronic"
            app:layout_constraintTop_toBottomOf="@+id/midwind" />

        <CheckBox
            android:id="@+id/headheart"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/headheart"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sugarill" />

        <CheckBox
            android:id="@+id/flu"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/flu"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowtemp" />

        <CheckBox
            android:id="@+id/bonelost"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/bonelost"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/decay"
            app:layout_constraintTop_toBottomOf="@+id/pakinshen" />

        <CheckBox
            android:id="@+id/menular"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/menular"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lowtemp"
            app:layout_constraintTop_toBottomOf="@+id/bonelost" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="31dp"
            android:background="#979797"
            android:text="@string/finsih"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="#CE0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ass" />

        <Button
            android:id="@+id/laststep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="54dp"
            android:background="#979797"
            android:text="上一步"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="#878282"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finish" />

        <CheckBox
            android:id="@+id/lowtemp"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/lowtemp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decay" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/illness"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/decay"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="14dp"
            android:text="@string/decay"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chronic" />

        <CheckBox
            android:id="@+id/ass"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="14dp"
            android:text="@string/ass"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/flu"
            app:layout_constraintTop_toBottomOf="@+id/menular" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
