<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFC75A">


    <ImageView
        android:id="@+id/info"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/info_pic"
        android:contentDescription="@string/todo"
        android:radius="90dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/info_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="0dp"
        android:text="@string/favor"
        android:textSize="40sp" />

    <CheckBox
        android:id="@+id/favor_wtf"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/wtf"
        android:button="@android:drawable/btn_star_big_on" />
    <TextView
        android:id="@+id/wtf_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="304dp"
        android:text="@string/wtf"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/walk"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/walk"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/walk_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="304dp"
        android:text="@string/walk"
        android:textSize="20sp" />


    <CheckBox
        android:id="@+id/hiking"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/hiking"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/hiking_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="304dp"
        android:text="@string/hiking"
        android:textSize="20sp" />


    <CheckBox
        android:id="@+id/vulonteer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="310dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/vulonteer"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/vulonteer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="325dp"
        android:layout_marginTop="304dp"
        android:text="@string/people"
        android:textSize="20sp" />


    <CheckBox
        android:id="@+id/ball"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="335dp"
        android:background="@drawable/ball"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/ball_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="415dp"
        android:text="@string/ball"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/flowering"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="335dp"
        android:background="@drawable/flowering"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/flower_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="415dp"
        android:text="@string/flowering"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/fishing"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="335dp"
        android:background="@drawable/fishing"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/fishing_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="415dp"
        android:text="@string/fishing"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/chess"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="310dp"
        android:layout_marginTop="335dp"
        android:background="@drawable/chess"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/chess_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="325dp"
        android:layout_marginTop="415dp"
        android:text="@string/chess"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/travel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="445dp"
        android:background="@drawable/travel"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/travel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="525dp"
        android:text="@string/travel"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/ink"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="445dp"
        android:background="@drawable/ink"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/ink_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="525dp"
        android:text="@string/ink"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/painting"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="445dp"
        android:background="@drawable/painting"
        android:button="@android:drawable/btn_star_big_on"/>

    <TextView
        android:id="@+id/paint_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="525dp"
        android:text="@string/painting"
        android:textSize="20sp" />
    <CheckBox
        android:id="@+id/dance"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="310dp"
        android:layout_marginTop="445dp"
        android:background="@drawable/dancing"
        android:button="@android:drawable/btn_star_big_on"/>
    <TextView
        android:id="@+id/dance_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="325dp"
        android:layout_marginTop="525dp"
        android:text="@string/dancing"
        android:textSize="20sp" />

    <Button
        android:id="@+id/laststep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="555dp"
        android:background="#979797"
        android:text="@string/laststep"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="#878282" />

    <Button
        android:id="@+id/nextstep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="292dp"
        android:layout_marginTop="555dp"
        android:background="#979797"
        android:text="@string/nextstep"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="#CE0000" />
</RelativeLayout>